# salvo-api-example

./: .gitignore  Cargo.toml
src/: handlers.rs  main.rs  routers.rs  schema.rs
src/schema/: mod.rs  resp.rs
