[package]
name = "restful_api"
authors = ["Elton Zheng <elton.zheng@me.com>"]
description = "A simple RESTful API server"
homepage = "https://pwr.ink"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
publist = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.46", features = ["logging","cors"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
regex = "1"
